# github-automatically-create-jira-issues-when-advanced-scanning-detects-an-issue

./: README.md  common_utils.py  date_time.py  github_scanning.py  jira.py  pyproject.toml  repos.py
.github/: dependabot.yml
